--- a/build.yaml
+++ b/build.yaml
@@ -5,7 +5,7 @@ targets:
         enabled: true
         generate_for:
           exclude:
-            - "lib/**"
+            - "lib/builder.dart"
 
 builders:
   pdx_data_tools:
